@@ -1,8 +1,11 @@
 package de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.client;
 
+import static de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.ConstantsDataTransfer.NAMING_SYSTEM_NUM_CODEX_DIC_PSEUDONYM;
+
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Stream;
 
@@ -10,6 +13,7 @@ import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.Condition;
 import org.hl7.fhir.r4.model.DomainResource;
 import org.hl7.fhir.r4.model.IdType;
+import org.hl7.fhir.r4.model.Identifier;
 import org.hl7.fhir.r4.model.Observation;
 import org.hl7.fhir.r4.model.Patient;
 import org.hl7.fhir.r4.model.Reference;
@@ -19,7 +23,8 @@ import org.slf4j.LoggerFactory;
 import ca.uhn.fhir.context.FhirContext;
 import de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.ConstantsDataTransfer;
 import de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.domain.DateWithPrecision;
-import de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.variables.PseudonymList;
+import de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.variables.PatientReference;
+import de.netzwerk_universitaetsmedizin.codex.processes.data_transfer.variables.PatientReferenceList;
 
 public class FhirClientFactory
 {
@@ -66,10 +71,16 @@ public class FhirClientFactory
 			}
 
 			@Override
-			public PseudonymList getPseudonymsWithNewData(DateWithPrecision exportFrom, Date exportTo)
+			public PatientReferenceList getPatientReferencesWithNewData(DateWithPrecision exportFrom, Date exportTo)
 			{
 				logger.warn("Returning demo pseudonyms for {}", localIdentifierValue);
-				return new PseudonymList(Arrays.asList("dic_foo/bar", "dic_foo/baz"));
+				return new PatientReferenceList(List.of(
+						PatientReference.from(new Identifier().setSystem(NAMING_SYSTEM_NUM_CODEX_DIC_PSEUDONYM)
+								.setValue("dic_foo/bar")),
+						PatientReference.from(new Identifier().setSystem(NAMING_SYSTEM_NUM_CODEX_DIC_PSEUDONYM)
+								.setValue("dic_foo/baz")),
+						PatientReference.from("http://dic-foo/fhir/Patient/3"),
+						PatientReference.from("http://dic-foo/fhir/Patient/4")));
 			}
 
 			@Override
@@ -78,8 +89,7 @@ public class FhirClientFactory
 				logger.warn("Returning demo resources for {}", pseudonym);
 
 				Patient p = fhirContext.newJsonParser().parseResource(Patient.class, patient);
-				p.addIdentifier().setSystem(ConstantsDataTransfer.NAMING_SYSTEM_NUM_CODEX_DIC_PSEUDONYM)
-						.setValue(pseudonym);
+				p.addIdentifier().setSystem(NAMING_SYSTEM_NUM_CODEX_DIC_PSEUDONYM).setValue(pseudonym);
 				p.setIdElement(new IdType("Patient", UUID.randomUUID().toString()));
 
 				Condition c = fhirContext.newJsonParser().parseResource(Condition.class, condition);
@@ -89,6 +99,22 @@ public class FhirClientFactory
 				o.setSubject(new Reference(p.getIdElement()));
 
 				return Stream.of(p, c, o);
+			}
+
+			@Override
+			public Optional<Patient> getPatient(String reference)
+			{
+				Patient patient = fhirContext.newJsonParser().parseResource(Patient.class, FhirClientFactory.patient);
+				patient.addIdentifier().setSystem(ConstantsDataTransfer.NAMING_SYSTEM_NUM_CODEX_BLOOM_FILTER).setValue(
+						"J75gYl+RiKSsxeu33tixBEEtFGCZwIEsWIKgvESaluvpSGBte/SBNZilz+sLSZdHSDKTL2J2d1yZsakqjtV5U2SMMJZ5IF3gEk1MT3sCRkxXEo1aJWKpnqndUTR+fvtSeMFj0y/O5yqrLV9zU79CNiTfZN5t1/6XGxZUXq2DovfCRrrpRxWjFwjKIDo0OkRANf7Mqp+Fsu0Un53JF57p/p1RLpWcJkC3xO+UslGbDo3mjgczdvxz0aLmWNA7/NIhk+Q50gxCX3B4QrntPfLLlBkrmIpsKRcLFVuYZik7pYZ9prd0qCLQ9tc8qiw1ry5kMfIvLnIS/FV36w==");
+				patient.setIdElement(new IdType("Patient", UUID.randomUUID().toString()));
+				return Optional.of(patient);
+			}
+
+			@Override
+			public void updatePatient(Patient patient)
+			{
+				// Nothing to do in stub client
 			}
 		};
 	}
